add ability to disable RSSI and disable it by default

--- a/modules/ZWave/lang/en.json
+++ b/modules/ZWave/lang/en.json
@@ -5,7 +5,9 @@
 	"l_name":"Internal name",
 	"h_name":"Should be a valid JS key string. Don't change unless you know what you are doing",
 	"rl_enableAPI":"Enable Z-Wave API",
+	"rl_enableRSSI":"Enable Z-Wave RSSI",
 	"h_enableAPI":"Handler HTTP requests to /ZWaveAPI/* and /ZWave/&lt;internal zway name&gt;/*",
+	"h_enableRSSI":"Enable checks for RSSI every 30 seconds",
 	"rl_publicAPI":"Allow public access to Z-Wave API",
 	"h_publicAPI":"Do not ask for authentication to access Z-Wave API",
 	"rl_createVDev":"Create virtual devices in Home Automation engine",
